DTSCCI-369 Remove code smells PR3